fix: fix z-index between layers

--- a/src/assets/scss/popper.scss
+++ b/src/assets/scss/popper.scss
@@ -2,6 +2,10 @@
 .v-popper {
     $this: &;
 
+    &__popper {
+        z-index: initial;
+    }
+
     &--theme-menu {
         &#{$this}__popper--shown {
             transition: opacity 500ms;
